Changes for 1.0.4

* Don't allow aa guns in blitzed territories to fire rockets (sgb)

* Improved land and sea unit purchasing. Changed parameters on factory purchase. Extensively modified ship handling in combat and non-combat. Modified battle prediction to improve land unit attack. (Kevin Moore)

* fix bug 2818023 again moving unit to carried-over battle causes existing units to be ignored (ComradeKev)

* new aa50 flag images for italy and russia (U-Boat)

* fix partially repaired factories showing as completely repaired (ComradeKev)

* fix bug 2818023 moving unit to carried-over battle causes existing units to be ignored (ComradeKev)

* Changed testCanRetreatIntoBlitzedTerritory() to allow retreat into blitzed territory per AA.org (ComradeKev)

* fix bugs 2815448 defending subs not getting sneak attack (Seidelin) 

* fix bug 2813511 naval units not asked to retreat (Seidelin)

* fix bug 2807885 fighters asked which transport to load (Seidelin)

* Partial refactor of validateAirCanLand (ComradeKev)

* add isInfantry marker to infantry units for all mods, not just aa50 (sgb)

* fix bug where strat bombers hit by aa en route to a battle lives (sgb)

* fix bug 2816632 Marine unit doesn't work with LL (sgb)

* fix bug 1888062 multinational transport bug (sgb)

* remove non working "Use Destroyers and Artillery" in Iron Blitz (sgb)

* fix bug 2815448, AA50: Defending subs don't get sneak defense (sgb)

* fix bug 2803021, NWO IPCs to spend don't display (sgb)

* move copies of blank_relief to images/relief tiles, this allows all maps to share a copy (sgb)

* change labels/dialog on repair screen to make it clear we are not purchasing units (sgb)

* fix bug 2802962, bug where units loaded onto transports in a pending battle zone do not die when their trasnsports do (sgb)

* fix bug 2807875, Factories count towards production limit (sgb)

* fix bug 2815801 Bid placement Error (sgb)
